--- a/app/views/hello_page/hello.html.erb
+++ b/app/views/hello_page/hello.html.erb
@@ -1,4 +1,5 @@
 <div>
     <h1>Time to jot down some thoughts</h1>
     <h2>You just created a Ruby on Rails web application.</h2>
+    <%= link_to 'New Note', new_note_path %>
 </div>
