Removing hello page elements and making note index the root. Styling the index page

--- a/app/views/notes/index.html.erb
+++ b/app/views/notes/index.html.erb
@@ -1,10 +1,14 @@
-<h1>A Penny For You Thoughts</h1>
-<h2>Write and all thoughts here</h2>
-
-
-<% @notes.each do |note| %>
-<%= note.title %>
-<%= note.body %>
-<%= link_to 'Edit', edit_note_path(note) %>
-<%= link_to 'Delete', note_path(note), method: :delete, data: { confirm: 'Are you sure?' } %>
-<% end %>
+<div class="header">
+  <h1 class="title">A Penny For Your Thoughts</h1>
+  <%= link_to 'New Note', new_note_path, class: "newbutton" %>
+</div>
+<div class="notes col-md-offset-2 col-md-8">
+  <% @note.each do |note| %>
+    <strong>Title:</strong>
+    <%= note.title %>
+    <strong>Body:</strong>
+    <%= note.body %>
+    <%= link_to 'Edit', edit_note_path(note) %>
+    <%= link_to 'Delete', note_path(note), method: :delete, data: { confirm: 'Are you sure?' } %>
+  <% end %>
+</div>
