--- a/app/assets/stylesheets/notes.scss
+++ b/app/assets/stylesheets/notes.scss
@@ -1,3 +1,36 @@
 // Place all the styles related to the Notes controller here.
 // They will automatically be included in application.css.
 // You can use Sass (SCSS) here: http://sass-lang.com/
+
+html,body {
+    background-color: #E0DCCA
+}
+
+.header {
+    text-align: center;
+}
+
+.title {
+  text-align: center;
+  font-family: "Helvetica Neue", Arial, sans-serif;
+  color: #1F1D66;
+}
+
+.newbutton {
+    display:inline-block;
+    padding:0.3em 1.2em;
+    margin:0 0.3em 0.3em 0;
+    border-radius:2em;
+    box-sizing: border-box;
+    text-decoration:none;
+    font-family:'Roboto',sans-serif;
+    font-weight:300;
+    color:#FFFFFF;
+    background-color:#4eb5f1;
+    text-align:center;
+    transition: all 0.2s;
+}
+
+.notes {
+  padding-top: 20%
+}
