Adding new styling to index page and adding destroy action

--- a/app/assets/stylesheets/notes.scss
+++ b/app/assets/stylesheets/notes.scss
@@ -31,6 +31,14 @@ html,body {
     transition: all 0.2s;
 }
 
+ul {
+  text-align: center;
+  list-style-type: none;
+}
+
+li {
+  padding: 5px;
+}
 .notes {
-  padding-top: 20%
+  padding-top: 10px
 }
