--- a/app/views/notes/index.html.erb
+++ b/app/views/notes/index.html.erb
@@ -3,12 +3,14 @@
   <%= link_to 'New Note', new_note_path, class: "newbutton" %>
 </div>
 <div class="notes col-md-offset-2 col-md-8">
+  <ul>
   <% @note.each do |note| %>
-    <strong>Title:</strong>
-    <%= note.title %>
-    <strong>Body:</strong>
-    <%= note.body %>
-    <%= link_to 'Edit', edit_note_path(note) %>
-    <%= link_to 'Delete', note_path(note), method: :delete, data: { confirm: 'Are you sure?' } %>
+    <li><strong>Title:</strong></li>
+    <li><%= note.title %></li>
+    <li><strong>Body:</strong></li>
+    <li><%= note.body %></li>
+    <li><%= link_to 'Edit', edit_note_path(note) %></li>
+    <li><%= link_to 'Delete', note_path(note), method: :delete, data: { confirm: 'Are you sure?' } %></li>
   <% end %>
+ </ul>
 </div>
