--- a/app/views/notes/new.html.erb
+++ b/app/views/notes/new.html.erb
@@ -1,6 +1,2 @@
 <h1>New Note</h1>
-<%=form_for @note ,url: {controller: 'notes', action: 'create'} do |f| %>
-  <%= f.text_field :title %>
-  <%= f.text_area :body, size: "60x12" %>
-  <%= f.submit "Create Note" %>
-<% end %>
+<%=render :notesform %>
